--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "tech challange",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "test": "jest --watchAll --verbose"
   },
   "author": "Cris",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jest": "^29.5.0"
   }
 }
