--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,15 @@ services:
     build: .
     ports:
       - "8080:8080"
-  mysql:
-    image: mysql:5.7
+  dynamodb-local:
+    command: "-jar DynamoDBLocal.jar -sharedDb -dbPath ./data"
+    image: "amazon/dynamodb-local:latest"
+    container_name: dynamodb-local
+    ports:
+      - "8000:8000"
     volumes:
-      - database:/mysql
-    environment:
-     MYSQL_ROOT_PASSWORD: Fy+0nEciFa4o
+      - "./docker/dynamodb:/home/dynamodblocal/data"
+    working_dir: /home/dynamodblocal
 
 volumes:
   database: 
