adding the algorithm and modifying the db

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,20 @@ services:
     ports:
       - "8080:8080"
   dynamodb-local:
-    command: "-jar DynamoDBLocal.jar -sharedDb -dbPath ./data"
-    image: "amazon/dynamodb-local:latest"
     container_name: dynamodb-local
+    image: "amazon/dynamodb-local"
+    networks:
+      - local-dynamodb
     ports:
-      - "8000:8000"
+      - "8000:8000" 
     volumes:
-      - "./docker/dynamodb:/home/dynamodblocal/data"
-    working_dir: /home/dynamodblocal
+      - "./docker/dynamodb:/home/dynamodblocal/data"   
+    working_dir: /home/dynamodblocal 
+    command: "-jar DynamoDBLocal.jar -sharedDb -dbPath ./data"
+
+networks:
+  local-dynamodb:
+    name: local-dynamodb
 
 volumes:
   database: 
