--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "tkc",
   "version": "1.0.0",
   "description": "tech challange",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node src/server.js",
     "test": "jest --watchAll --verbose"
   },
   "author": "Cris",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1401.0",
     "express": "^4.18.2",
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "node-dijkstra": "^2.5.0"
   }
 }
