--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aws-sdk": "^2.1401.0",
     "express": "^4.18.2",
     "jest": "^29.5.0",
-    "node-dijkstra": "^2.5.0"
+    "node-dijkstra": "^2.5.0",
+    "supertest": "^6.3.3"
   }
 }
